--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-.vscode
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+.vscode/
 .DS_Store
-bin
